--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: cadetblue;
   font-family: "Courier New", Courier, monospace;
 }
 
@@ -13,12 +14,16 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  color: #ffffff;
+
 }
 
 .image {
   width: 70%;
   height: 50%;
-  margin-left: 20%;
+  margin-left: 24%;
+
 }
 
 .title {
@@ -27,14 +32,14 @@
 }
 
 .description {
-  line-height: 1;
+  line-height: 1.5;
   margin: 2rem 0;
   font-size: 1.2rem;
 }
 
 .button {
   border-radius: 5px;
-  background-color: blue;
+  background-color: rgb(230, 144, 58);
   color: white;
   border: none;
   font-size: 15px;
@@ -42,7 +47,7 @@
   width: 200px;
   cursor: pointer;
   margin-right: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
 }
 
 .button2 {
@@ -55,14 +60,42 @@
   cursor: pointer;
   margin-right: 2%;
   margin-top: 1rem;
+  margin-bottom: 1.2%;
+
 }
+
+.button3 {
+  border-radius: 4px;
+  background-color: rgb(15, 103, 37);
+  border: none;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 10px;
+  cursor: pointer;
+  margin-right: 2%;
+  margin-top: 1rem;
+  width: 200px;
+  margin-bottom: 4%;
+}
+
+.input {
+  border-radius: 5px;
+  background-color: rgb(214, 179, 133);
+  border: 1px solid black;
+  padding: 5px;
+}
+
 
 .proposalCard {
   width: fit-content;
-  margin-top: 0.25rem;
+  margin-top: 0.30rem;
   border: black 2px solid;
   flex: 1;
   flex-direction: column;
+  margin-bottom: 0.50rem;
+  padding: 15px;
+  background-color: burlywood;
+  color: black;
 }
 
 .container {
@@ -72,6 +105,10 @@
 .flex {
   flex: 1;
   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 /* media query */
